<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="fr.vyfe.activity.ConnexionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="330dp"
        tools:layout_editor_absoluteY="315dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="202dp"
                android:layout_height="85dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/vyfe_blanc" />

            <LinearLayout
                android:id="@+id/linear_layout_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo">

                <TextView
                    android:id="@+id/tv_connected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connected"
                    android:textColor="@color/colorWhiteTwo"
                    android:textSize="20sp"
                    app:fontFamily="@font/roboto_bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/et_mail"
                        android:layout_width="0dp"
                        android:layout_weight="0.9"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/style_input"
                        android:ems="10"
                        android:hint="@string/email"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:padding="15dp"
                        android:textColor="@color/colorWhiteTwo"
                        android:textColorHint="@color/colorWhiteTwo"
                        android:textSize="18sp"
                        app:fontFamily="@font/roboto"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_connected" />
                    <ImageView
                        android:id="@+id/iv_show_password2"
                        android:layout_width="5dp"
                        android:layout_height="35dp"
                        android:visibility="invisible"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/keypassword"
                        android:layout_gravity="bottom"
                        android:layout_weight="0.1"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/linear_password">
                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_weight="0.9"
                        android:background="@drawable/style_input"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="15dp"
                        android:textColor="@color/colorWhiteTwo"
                        android:textColorHint="@color/colorWhiteTwo"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_mail" />

                    <ImageView
                        android:id="@+id/iv_show_password"
                        android:layout_width="5dp"
                        android:layout_height="35dp"
                        android:layout_weight="0.1"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/nopassword"
                        android:layout_gravity="bottom"
                        />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    </LinearLayout>

                    <Button
                        android:id="@+id/tv_lost_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:background="@null"
                        android:fontFamily="@font/roboto"
                        android:text="@string/lost_password"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhiteTwo" />


                    <Button
                        android:id="@+id/btn_connect"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:background="@drawable/style_button"
                        android:fontFamily="@font/roboto_bold"
                        android:padding="5dp"
                        android:text="@string/connected_maj"
                        android:textColor="@color/colorWhiteTwo"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/btn_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:paddingTop="10dp"
                android:text="@string/create_account"
                android:textColor="@color/colorWhiteTwo"
                android:textSize="15sp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>