...
    <string name="search">Rechercher</string>
    <string name="hello_user">Bonjour</string>
    <string name="connected">Connexion</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="lost_password">Mot de passe oublié ?</string>
    <string name="connected_maj">Se connecter</string>
    <string name="info_session">Informations sur la session</string>
    <string name="add_description">Ajouter une description</string>
    <string name="my_analyse">Mes grilles d\'analyses</string>
    <string name="grid_title">Titre de la grille</string>
    <string name="create_tags">Créer des tags</string>
    <string name="go">Démarrer</string>
...
